MapMarker exploring done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
 <div *ngIf="apiLoaded | async">
 
-  <google-map height="400px" width="750px" [center]="center" [zoom]="zoom">
+  <google-map height="400px"
+            width="750px"
+            [center]="center"
+            [zoom]="zoom"
+            (mapClick)="addMarker($event)">
+
+    <map-marker *ngFor="let markerPosition of markerPositions"
+      [position]="markerPosition" [options]="markerOptions" 
+      (mapClick)="addMarker($event)">
+    </map-marker>
 
     <map-polyline [path]="vertices"></map-polyline>
-    
+
   </google-map>
 
 </div>
